--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,20 +1,20 @@
-name: Deploy Static Site
-on: push
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+# name: Deploy Static Site
+# on: push
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
 
-      - name: Replace Groq API Key
-        run: sed -i 's/PLACEHOLDER_GROQ_API_KEY/${{ secrets.GROQ_API_KEY }}/g' index.html
+#       - name: Replace Groq API Key
+#         run: sed -i 's/PLACEHOLDER_GROQ_API_KEY/${{ secrets.GROQ_API_KEY }}/g' index.html
 
-      - name: Replace Tavily API Key
-        run: sed -i 's/PLACEHOLDER_TAVILY_API_KEY/${{ secrets.TAVILY_API_KEY }}/g' index.html
+#       - name: Replace Tavily API Key
+#         run: sed -i 's/PLACEHOLDER_TAVILY_API_KEY/${{ secrets.TAVILY_API_KEY }}/g' index.html
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GH_PAT }}
-          publish_dir: .
+#       - name: Deploy to GitHub Pages
+#         uses: peaceiris/actions-gh-pages@v3
+#         with:
+#           github_token: ${{ secrets.GH_PAT }}
+#           publish_dir: .
